# amalga_doc_parser

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-tests.yml
docs/: README.md  usage.md
src/amalga_doc_parser/: __init__.py  models.py  parser.py
tests/: test_parser.py
tests/data/: sample.md
tests/src/amalga_doc_parser/: __init__.py  parser.py
